[package]
name = "discord-fuse"
version = "0.1.0"
authors = ["jan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = {git = "https://github.com/zargony/fuse-rs.git"}
anyhow = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
libc = "0.2"
env_logger = "0.8"
log = "0.4"

[dependencies.serenity]
default-features = false
features = ["http", "native_tls_backend", "model"]
version = "0.10"


